--- a/styles/components/style-a11y.css
+++ b/styles/components/style-a11y.css
@@ -63,8 +63,6 @@
     background-color: var(--color-shadow-modal);
     -webkit-backdrop-filter: blur(4px); backdrop-filter: blur(4px);
 
-    scrollbar-width: thin;
-    scrollbar-color: var(--color-primary) transparent;
     scroll-behavior: var(--scroll-behavior);
 
     z-index: 9998;
@@ -104,8 +102,6 @@
     transform: translateY(var(--a11y-gap)); 
     transition: transform var(--animation-speed) ease;
 
-    scrollbar-width: thin;
-    scrollbar-color: var(--color-primary) transparent;
     scroll-behavior: var(--scroll-behavior);
 }
 
