--- a/styles/components/style-details.css
+++ b/styles/components/style-details.css
@@ -19,8 +19,6 @@
 
     box-sizing: border-box;
     
-    scrollbar-width: thin;
-    scrollbar-color: var(--color-primary) transparent;
     scroll-behavior: var(--scroll-behavior);
 }
 
